# settlix

./: .env.example  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  DX-REPORT.md  IMPROVEMENTS.md  README.md  backup.json  components.json  eslint.config.mjs  next.config.ts  nixpacks.toml  package.json  server.ts  skills-lock.json  tsconfig.json  vercel.json
app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
app/(pay)/: layout.tsx  page.tsx
app/(site)/: layout.tsx  page.tsx
app/dashboard/: page.tsx
app/embed/: layout.tsx
components/: theme-provider.tsx
components/auth/: auth-context.tsx  connect-button.tsx
components/dashboard/: api-keys-section.tsx  app-sidebar.tsx  create-invoice-dialog.tsx  create-key-dialog.tsx  create-link-dialog.tsx  dashboard-topbar.tsx  distribute-button.tsx  invoice-section.tsx  link-row.tsx  links-table.tsx  mobile-bottom-nav.tsx  qr-modal.tsx  split-modal.tsx  stats-bar-invoice.tsx  stats-bar.tsx  webhook-modal.tsx
components/docs/: checkout-overlay.tsx  code-block.tsx  (+9 more)
lib/: db.ts  money.ts  pay-amount.ts  tokens.ts  utils.ts  validation.ts
prisma/: backup.ts  restore.ts  schema.prisma  seed.ts
program/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
program/programs/settlix/: Cargo.toml
program/programs/settlix/src/: errors.rs  lib.rs  state.rs
program/programs/settlix/src/instructions/: close_vault.rs  distribute.rs  initialize_vault.rs  mod.rs  update_recipients.rs
program/tests/: settlix.ts
public/: checkout.d.ts  checkout.js  demo.html
(+237 files in other folders)
