[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
opt-level = "z"   # optimize for size
lto = true        # link-time optimization
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
